Responsive updates to answer footer
Updates to make answer footer responsive. 
The answer footer includes the references and answer disclaimer.

--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -173,3 +173,11 @@ sup {
     font-size: 10px;
     line-height: 10px;
 }
+
+@media (max-width: 480px) {
+    .answerFooter, .answerDisclaimerContainer{
+        flex-direction: column;
+        align-items: left; 
+        gap: 4px; 
+    }
+}
