--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -14,8 +14,8 @@
 }
 
 .customStack {
-    width: 100%;
-    display: block !important;
+  width: 100%;
+  display: block !important;
 }
 
 .headerIconMain {
@@ -57,7 +57,41 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 10px;
+  margin-right: 40px;
+  color: #ffffff;
+}
+
+.historyDiv {
+  margin-right: 20px;
+}
+
+.userDiv {
+}
+
+.historyIcon,
+.MdVisibilityOff {
+  color: white;
+}
+
+.usercontainer {
+  display: inline-flex;
+  align-items: center;
+  flex-direction: column;
+  margin-left: auto;
+}
+
+.userIconContainer {
+  font-weight: bolder;
+}
+
+.userIcon {
+  height: 20px;
+  width: 20px;
+}
+
+.username {
+  font-weight: bold;
 }
 
 .shareButtonContainer {
@@ -139,4 +173,25 @@
   display: flex;
   align-items: center;
   color: #242424;
+}
+
+.feedbackDiv {
+  position: relative;
+  padding: 10px 20px;
+  height: 35px;
+  width: 35px;
+}
+
+.anchor {
+  text-decoration: none;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-right: 10px;
+}
+
+.clearChatBroom {
+  color: #ffffff;
+  border-radius: 4px;
+  z-index: 1;
 }
