--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -1,17 +1,14 @@
 .container {
     flex: 1;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 20px
 }
 
 .chatRoot {
     flex: 1;
     display: flex;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 0px;
     gap: 5px;
 }
 
@@ -22,7 +19,8 @@
     align-items: center;
     background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #FFFFFF 57.29%, #EEF6FE 100%);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
     overflow-y: auto;
     max-height: calc(100vh - 100px);
 }
@@ -344,5 +342,12 @@ a {
 
     .chatEmptyStateTitle {
         line-height: 36px;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .container{
+        flex-direction: column;
     }
 }
