--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -6,6 +6,7 @@
 
 .header {
     background-color: #004a98;
+    padding: 9px 0;
 }
 
 .headerContainer {
@@ -67,6 +68,30 @@
     line-height: 20px;
     display: flex;
     align-items: center;
+    color: #FFFFFF;
+}
+
+.mainMenuBtn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    margin-left: 20px;
+    gap: 4px;
+    width: 32px;
+    height: 32px;
+    background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #0F6CBD 33.63%, #2D87C3 70.31%, #8DDDD8 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+}
+
+.mainMenuBtn:hover {
+    background: linear-gradient(135deg, #0F6CBD 0%, #2D87C3 51.04%, #8DDDD8 100%);
+}
+
+.mainMenuBtnIcon {
     color: #FFFFFF;
 }
 
