--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -35,6 +35,14 @@
     align-items: center;
 }
 
+.chatGridState {
+    display: flex;
+    justify-content: center;
+    margin-left: 56px;
+    max-width: 996px;
+    margin-top: 30px;
+}
+
 .chatEmptyStateTitle {
     font-style: normal;
     font-weight: 700;
@@ -281,7 +289,7 @@
     color: #323130;
     margin-top: 12px;
     margin-bottom: 12px;
-} 
+}
 
 .citationPanelTitle:hover {
     text-decoration: underline;
@@ -298,7 +306,7 @@
     order: 1;
     align-self: stretch;
     flex-grow: 0;
-} 
+}
 
 a {
     padding-left: 5px;
@@ -348,5 +356,15 @@ a {
 
     .citationPanel {
         max-width: 100%;
+    }
+
+    .chatGridState {
+        margin-left: 0;
+    }
+}
+
+@media (max-width: 768px) {
+    .chatGridState {
+        margin-left: 0;
     }
 }
