--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -1,15 +1,15 @@
 .questionInputContainer {
-  height: 120px;
+  height: 64px;
   position: absolute;
   left: 6.5%;
   right: 0%;
   top: 0%;
   bottom: 0%;
-  background: #ffffff;
   box-shadow:
     0px 8px 16px rgba(0, 0, 0, 0.14),
     0px 0px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 8px;
+    border: 1px solid #0093A7;
+    filter: drop-shadow(0px 7px 13px rgba(0, 0, 0, 0.11));
 }
 
 .questionInputTextArea {
@@ -23,21 +23,23 @@
 
 .questionInputSendButtonContainer {
   position: absolute;
-  right: 24px;
-  bottom: 20px;
+  right: 10px;
+  bottom: 10px;
 }
 
 .questionInputSendButton {
-  width: 24px;
-  height: 23px;
+  width: 17px;
+  height: 17px;
+   background: none;
+  color: #C8D3D9;
 }
 
 .questionInputSendButtonDisabled {
   /* opacity: 0.4; */
-  width: 24px;
-  height: 23px;
+  width: 17px;
+  height: 17px;
   background: none;
-  color: #424242;
+  color: #C8D3D9;
 }
 
 .questionInputBottomBorder {
@@ -46,9 +48,8 @@
   height: 4px;
   left: 0%;
   bottom: 0%;
-  background: radial-gradient(106.04% 106.06% at 100.1% 90.19%, #0f6cbd 33.63%, #8dddd8 100%);
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
+  background: #0093A7;
+  box-shadow: 0px 7px 13px rgba(0, 0, 0, 0.11);
 }
 
 .questionInputOptionsButton {
