--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -8,17 +8,26 @@
   box-shadow:
     0px 8px 16px rgba(0, 0, 0, 0.14),
     0px 0px 2px rgba(0, 0, 0, 0.12);
-    border: 1px solid #0093A7;
-    filter: drop-shadow(0px 7px 13px rgba(0, 0, 0, 0.11));
+  border: 1px solid #0093a7;
+  filter: drop-shadow(0px 7px 13px rgba(0, 0, 0, 0.11));
+  background: #1d1d1b;
+  min-height: 30px;
+  color: #c8d3d9;
+}
+
+.questionInputContainer textarea {
+  background: #1d1d1b;
+  min-height: 30px;
+  color: #c8d3d9;
+  padding: 8px 10px;
+}
+.questionInputContainer textarea::placeholder {
+  color: #c8d3d9;
 }
 
 .questionInputTextArea {
   width: 100%;
   line-height: 40px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 12px;
-  margin-right: 12px;
 }
 
 .questionInputSendButtonContainer {
@@ -30,8 +39,8 @@
 .questionInputSendButton {
   width: 17px;
   height: 17px;
-   background: none;
-  color: #C8D3D9;
+  background: none;
+  color: #c8d3d9;
 }
 
 .questionInputSendButtonDisabled {
@@ -39,7 +48,7 @@
   width: 17px;
   height: 17px;
   background: none;
-  color: #C8D3D9;
+  color: #c8d3d9;
 }
 
 .questionInputBottomBorder {
@@ -48,7 +57,7 @@
   height: 4px;
   left: 0%;
   bottom: 0%;
-  background: #0093A7;
+  background: #0093a7;
   box-shadow: 0px 7px 13px rgba(0, 0, 0, 0.11);
 }
 
