--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -16,6 +16,7 @@
 }
 
 .chatContainer {
+  position: relative;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -86,6 +87,7 @@
 
 .chatMessageUserMessage {
   display: flex;
+  flex-direction: row;
   padding: 20px;
   background: #edf5fd;
   border-radius: 8px;
