--- a/frontend/src/components/common/Button.module.css
+++ b/frontend/src/components/common/Button.module.css
@@ -2,12 +2,12 @@
   width: 86px;
   height: 32px;
   border-radius: 4px;
-  background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #0f6cbd 33.63%, #2d87c3 70.31%, #8dddd8 100%);
+  background-color: #62417C;
   padding: 5px 12px;
 }
 
 .shareButtonRoot:hover {
-  background: linear-gradient(135deg, #0f6cbd 0%, #2d87c3 51.04%, #8dddd8 100%);
+  background: #875BA9;
 }
 
 .shareButtonRoot span {
@@ -24,15 +24,15 @@
 
 .historyButtonRoot {
   width: 180px;
-  border: 1px solid #d1d1d1;
+  border: 1px solid #62417C;
 }
 
 .historyButtonRoot:hover {
-  border: 1px solid #d1d1d1;
+  border: 1px solid #62417C;
 }
 
 .historyButtonRoot:active {
-  border: 1px solid #d1d1d1;
+  border: 1px solid #62417C;
 }
 
 @media (max-width: 480px) {
