--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,20 +10,19 @@ body {
 }
 
 html {
-  background: #f2f2f2;
-  font-family:
-    'Segoe UI',
-    'Segoe UI Web (West European)',
-    'Segoe UI',
-    -apple-system,
-    BlinkMacSystemFont,
-    Roboto,
-    'Helvetica Neue',
-    sans-serif;
+  background: #F9F9F9;
+  font-family: 'Saans', system-ui, Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 #root {
   height: 100%;
+}
+
+@font-face {
+  font-family: 'Saans';
+  font-style: normal;
+  font-display: block;
+  src:url('assets/saansvf.woff2') format("woff2");
 }
