--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+/*perigramma tou frontent*/
 * {
   box-sizing: border-box;
 }
@@ -10,7 +11,7 @@ body {
 }
 
 html {
-  background: #f2f2f2;
+  background: #32333f;
   font-family:
     'Segoe UI',
     'Segoe UI Web (West European)',
